--- a/02_descriptive_stats.Rmd
+++ b/02_descriptive_stats.Rmd
@@ -14,6 +14,7 @@ suppressPackageStartupMessages(library(lubridate))
 suppressPackageStartupMessages(library(confintr))
 
 options(scipen = 999)
+# testing 
 ```
 
 
